update articel controller

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-js-decode": "^1.9.0",
     "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
     "serverless-http": "^3.2.0",
     "swagger-jsdoc": "^6.2.8",
