--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm i",
+    "export": "node data.js",
     "start": "nodemon server.js"
   },
   "author": "Pobi Casaul",
